Bug 162340 - Firebird: Content of subform, linked by a decimal value, isn't shown any more
Summary: Firebird: Content of subform, linked by a decimal value, isn't shown any more
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
24.8.0.1 rc
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2024-08-04 07:00 UTC by Robert Großkopf
Modified: 2024-08-14 09:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Start database with macros enabled. Have a look at the tablecontrol at the bottom of the form. (635.66 KB, application/vnd.oasis.opendocument.database)
2024-08-04 07:00 UTC, Robert Großkopf
Details
Simple example, subform only linked by an Integer and a Decimal value (12.13 KB, application/vnd.oasis.opendocument.database)
2024-08-05 07:32 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2024-08-04 07:00:26 UTC
Created attachment 195688 [details]
Start database with macros enabled. Have a look at the tablecontrol at the bottom of the form.

Open the attached database. If you have set macros enabled the right form will be opened directly. If not open form "frm_XRechnung-Extension".

There is a form, which could be seen in area "Untergliederung Rechnungsposten" which is linked (by many fields) to "Rechnungsposten". 
The tablecontrol "Untergliederung Rechnungsposten" shows some rows up to LO 24.2.5.2.
Same tablecontrol won't show any entry in LO 24.8.0.2

Will test this a little bit more. Might be something has been limited in connections from one form to another, but all other forms and subforms will work well.
Comment 1 Robert Großkopf 2024-08-04 07:26:02 UTC
Have tested a little bit more.
There is one link "Steuersatz" from one form to the other. This is a decimal value with 2 decimal places. If I remove this field as a linked field the connection from one form to the other form will work.

So reason for this bug seems to be something sprecial with decimal values, could also be with Firebird and decimal values, because the database is a Firebird database.

Might be it is a side-affect from https://bugs.documentfoundation.org/show_bug.cgi?id=156530
Comment 2 Robert Großkopf 2024-08-05 07:32:39 UTC
Created attachment 195706 [details]
Simple example, subform only linked by an Integer and a Decimal value

Added a simple example. No Macro needed.
Subform is linked to Mainform by an Integer and a Decimal value.
Up to LO 24.2.5.2 it will show Name "Großkopf" in MainForm. and Name "Robert" in Subform.
Since LO 24.8.0.2 Subform seems to be empty, will only show the content of the 2 linked fields.
Comment 3 Alex Thurgood 2024-08-05 09:11:49 UTC
Hi Robert,

No problem with displaying subform information, using

Version: 24.8.0.0.alpha1 (AARCH64) / LibreOffice Community
Build ID: a17e39caaf73108bee692d6f64a44c62f4066f1d
CPU threads: 8; OS: macOS 14.5; UI render: Skia/Raster; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

so, it should be related to a change entered after the release of 24.8.0.0.

Also tested with:

Version: 25.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: f7197e574cdbd7410fcadab1632bcce2626dca5a
CPU threads: 8; OS: macOS 14.5; UI render: Skia/Raster; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

Issue reproducible here.
Comment 4 Alex Thurgood 2024-08-05 09:13:00 UTC
@mikekaganski: any idea what is going on ?
Comment 5 Alex Thurgood 2024-08-05 09:42:26 UTC
Might be something in:

https://git.libreoffice.org/core/+/f1121362f3dd4287577dd7952c6f00a524a81111%5E%21
Comment 6 Mike Kaganski 2024-08-05 17:13:01 UTC
https://gerrit.libreoffice.org/c/core/+/171506
Comment 7 Commit Notification 2024-08-06 04:54:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b25164a3a4c47a9c5a9f31a8feb08a8aa0f8f401

tdf#162340: handle target column scale in setObjectWithInfo

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Robert Großkopf 2024-08-12 08:34:04 UTC
Works well in 
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 59cb37a210675d4269c2fcd48feeffe942538891
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
(2024-08-12)

Could it be backported to LO 24.8.?
Comment 9 Mike Kaganski 2024-08-13 03:46:05 UTC
(In reply to Robert Großkopf from comment #8)
> Could it be backported to LO 24.8.?

It is in review since Aug 06th: https://gerrit.libreoffice.org/c/core/+/171525
Comment 10 Commit Notification 2024-08-14 09:04:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e7ec197706700c260cc53713027c56d73e6f16c1

tdf#162340: handle target column scale in setObjectWithInfo

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.